# apohara-trustlayer

./: .bestpractices.json  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  GOVERNANCE.md  KNOWN_ISSUES.md  LICENSE  Makefile  README.md  SECURITY.md  TRUSTLAYER_ADR.md  TRUSTLAYER_GAP_ANALYSIS.md  TRUSTLAYER_VERTICAL_SLICE_SPEC.md  branch_protection.json  deny.toml  deny.toml.staging  pytest.ini  requirements-audit.txt  requirements-ci.txt
crates/apohara-agentguard/: .gitignore  ARCHITECTURE.md  BENCHMARK.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  LICENSE  LICENSE-MIT  README.md  SECURITY.md  THIRD-PARTY-LICENSES  about.hbs  about.toml  deny.toml
crates/apohara-agentguard/.claude-plugin/: marketplace.json
crates/apohara-agentguard/.github/: dependabot.yml
crates/apohara-agentguard/.github/workflows/: _attest.yml  ci.yml  codeql.yml  publish.yml  release.yml
crates/apohara-agentguard/benches/: hook_latency.rs  regex_redos.rs
crates/apohara-agentguard/examples/: agentguard.toml
crates/apohara-agentguard/fuzz/: Cargo.toml  README.md
crates/apohara-agentguard/fuzz/fuzz_targets/: gate_evaluate.rs
crates/apohara-agentguard/packaging/: hooks.json  install.sh  plugin.json
crates/apohara-agentguard/packaging/npx-wrapper/: package.json
crates/apohara-agentguard/src/: audit.rs  config.rs  lib.rs  main.rs  secrets.rs  verdict.rs
crates/apohara-agentguard/src/firewall/: djl.rs  mod.rs  owasp.rs  refetch.rs  two_stage.rs
crates/apohara-agentguard/src/gate/: compound.rs  decode.rs  mod.rs  normalize.rs  resolve.rs  taxonomy.rs
crates/apohara-agentguard/src/hook/: canary.rs  contract.rs  mod.rs  pathguard.rs
crates/apohara-agentguard/src/mcp/: mod.rs
crates/apohara-agentguard/src/policy/: engine.rs  matcher.rs  mod.rs  schema.rs
crates/apohara-agentguard/tests/: ask_corpus.rs  audit.rs  benchmark.rs  benchmark_packs.rs  benchmark_tensortrust.rs  check_cli.rs  codex_hook.rs  danger_warning.rs  example_config_parses.rs  firewall_posture.rs  gate_evasions.rs  gate_fp.rs  gate_normalize.rs  headline_bypass.rs  hook_config.rs  hook_contract.rs  kill_switch_env.rs  pathguard.rs  policy_engine.rs  readme_sync.rs  sandbox_build_e2e.rs  sandbox_escape.rs  sandbox_failclosed.rs  sandbox_landlock.rs  sandbox_offlinux.rs  sandbox_seccomp.rs
crates/themis-band-client/: Cargo.toml
crates/themis-band-client/agent-config/: agent_config.yaml.tmpl
crates/themis-band-client/scripts/: run_agent.py
crates/themis-band-client/src/: lib.rs  signed_message.rs  trust_gate.rs
crates/themis-band-client/tests/: trust_gate_e2e.rs
crates/themis-frontend/: Cargo.toml
crates/themis-frontend/src/: art50_banner.rs  lib.rs
crates/themis-frontend/static/: agents.json  compliance.html  index.html
crates/themis-orchestrator/: Cargo.toml
crates/themis-orchestrator/src/: a2a_handler.rs  agent_registry.rs  art50.rs  band_live.rs  context.rs  dual_llm.rs  evidence_sealing.rs  fixtures.rs  http.rs  human_guard.rs  keyring.rs  lib.rs  mcp_proxy.rs  orchestrator.rs  packet.rs  rekor_anchoring.rs  rekor_backend.rs  rogue_monitor.rs  room.rs  routing.rs  sandbox.rs  subprocess.rs  tenants.rs  test_support.rs  wire_format.rs
crates/themis-orchestrator/tests/: a2a_discovery.rs  aiml_wiremock_e2e.rs  art50_compliance.rs  baaar_z3_1210.rs  band_real_integration.rs  context_invariants.rs  demo_data_loads.rs  honesty_auditor.rs  http_e2e.rs  human_guard.rs  judge_pov_e2e.rs  keyring.rs  mcp_proxy_e2e.rs  pdf_qr_code.rs  property_chain.proptest-regressions  property_chain.rs  public_bench.rs  sandbox_enforcement.rs  sealed_packet_rekor.rs  snapshot_compliance.rs
crates/tl-argus/: Cargo.toml
crates/tl-argus/src/: audit_event.rs  cordon.rs  lib.rs  specialists.rs  tests.rs
crates/tl-context/: Cargo.toml
crates/tl-context/src/: context.rs  inv15.rs  lib.rs  proof.rs  tests.rs  z3_inv15.rs
crates/tl-evidence/: Cargo.toml
crates/tl-evidence/src/: bundle_pdf.rs  cose.rs  hmac_chain.rs  key_rotation.rs  lib.rs  packet.rs  tsa.rs
crates/tl-evidence/tests/: attestix_cross_validation.rs  signer_proptest.rs
crates/tl-ffi/: Cargo.toml
crates/tl-ffi/src/: lib.rs
crates/tl-frontend/: Cargo.toml
crates/tl-frontend/src/: lib.rs  main.rs
crates/tl-frontend/static/: app.js  index.html  style.css
crates/tl-frontend/tests/: cost_drift.rs  cost_log_schema.rs  e2e_cold_start.rs  sse_stream.rs
crates/tl-mcp-server/: Cargo.toml
crates/tl-mcp-server/src/: backends.rs  backends_global.rs  envelope.rs  lib.rs  main.rs  rule_of_two.rs  tools_v2.rs
crates/tl-mcp-server/tests/: ports_integration.rs  tools_v2_integration.rs
crates/tl-orchestrator/: Cargo.toml
crates/tl-orchestrator/src/: lib.rs
crates/tl-orchestrator/tests/: rfc3161_chain.rs  seal_http_schema.rs
crates/tl-pdf-core/: Cargo.toml
crates/tl-pdf-core/examples/: e2e.rs
crates/tl-pdf-core/src/: content.rs  lib.rs  sigdict.rs  writer.rs
crates/tl-policy/: Cargo.toml
crates/tl-policy/src/: iso_42001.rs  lib.rs  nist_ai_rmf.rs
crates/tl-policy/tests/: compliance_strategy.rs  iso_42001_integration.rs  real_mappers_integration.rs
crates/tl-scitt/: Cargo.toml
crates/tl-scitt/src/: countersign.rs  lib.rs
crates/tl-types/: Cargo.toml
crates/tl-types/src/: lib.rs
crates/tl-wasm/: Cargo.toml
crates/tl-wasm/src/: lib.rs
crates/tl-watermark/: Cargo.toml
crates/tl-watermark/src/: lib.rs
sdk/python/: pyproject.toml
sdk/python-light/: pyproject.toml
services/control_plane/: alembic.ini  pyproject.toml
services/control_plane/app/: __init__.py  adversarial_scaffold.py  catalyst_integration.py  catalyst_production.py  compliance_mappers.py  config.py  constants.py  hsm_adapter.py  main.py  market_exit_w5_w6.py  notary.py  notary_production.py  pdf_helpers.py  platform_w4.py  pld_shield.py  qes_adapter.py  rfc9162_verifier.py  schemas.py  scitt.py  sealchain_core.py  verification_page.py  watermark_strategy.py
services/control_plane/migrations/: env.py
services/control_plane/scripts/: migrate_notary_sqlite_to_pg.py  run_first_real_cert.sh
(+245 files in other folders)
