[package]
name = "apohara-agentguard"
version = "0.3.0"
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "Deterministic, offline, no-model safety hook + local seccomp+Landlock sandbox + input firewall for Claude Code."
repository = "https://github.com/SuarezPM/apohara-agentguard"

[lib]
name = "apohara_agentguard"
path = "src/lib.rs"

[[bin]]
name = "apohara-agentguard"
path = "src/main.rs"

[dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1"
regex = "1"
clap = { version = "4", features = ["derive", "env"] }
base64 = "0.22"
ureq = { version = "2", default-features = false, features = ["tls"] }
sha2 = "0.10"

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.31", features = ["sched", "process", "fs", "mount", "user"] }
seccompiler = { version = "0.5", features = ["json"] }
libc = "0.2"
landlock = "0.4"

[dev-dependencies]
proptest = "1"

# ReDoS guard runs as a plain binary (no libtest harness) so it executes under
# both `cargo test` and `cargo bench`.
[[bench]]
name = "regex_redos"
harness = false

# Hook-path latency: end-to-end in-process `hook::run` p50/p99 timing. Plain
# binary (no libtest harness), same pattern as `regex_redos`.
[[bench]]
name = "hook_latency"
harness = false

[profile.release]
opt-level = 3
lto = true
strip = true
