[package]
name = "themis-band-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "THEMIS Band client — subprocess wrapper around the Band Python SDK 0.2.11. Persistent child process per room, JSON over stdin/stdout for control plane, tokio-tungstenite for WebSocket @mention events."

[dependencies]
async-trait = "0.1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# C-04 (G20 / ASI07): DID-signed Band messages. JCS for canonical JSON,
# Ed25519 for signatures, did:key for sender identity.
serde_json_canonicalizer = "0.3"
ed25519-dalek = { version = "2", features = ["rand_core"] }
bs58 = "0.5"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "process", "io-util", "sync", "time"] }
dashmap = "6"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3"
rand = "0.9"

[[bin]]
name = "themis-band-spawn"
path = "src/bin/themis-band-spawn.rs"
