[package]
name = "tl-evidence"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
license = "MIT"
authors = ["Pablo M. Suarez <suarezpm@csnat.unt.edu.ar>"]
description = "VOUCH evidence layer — Ed25519 signer + RFC 3161 timestamp + Rekor v2"

[dependencies]
themis-evidence = { path = "../themis-evidence" }
ed25519-dalek = "2"
blake3 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
# Pinned per plan v3.1 AC-20 (coset is "under construction" upstream):
coset = "=0.4.2"
# v1.1.0-US-1: real DigiCert adapter. reqwest with rustls-tls (no native-tls).
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
# x509-parser for cert chain verification.
x509-parser = "0.16"
# base64 for digest encoding in fetch_token.
base64 = "0.22"
# NOTE: themis-compressor was incorrectly listed in plan v3.1 as the
# RFC 3161 substrate. Reality: themis-compressor is LLMLingua-2
# prompt compression. The actual RFC 3161 lives in themis-evidence::timestamp
# (x509-tsp + cms). Re-exported via tl-evidence/src/tsa.rs.

[dev-dependencies]
proptest = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
# wiremock for mocking the DigiCert endpoint in tests.
wiremock = "0.6"
