[package]
name = "tl-mcp-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Apohara TrustLayer MCP server — exposes 7 tools for AI agents (Claude Code, Cursor, Codex) to generate, verify, and inspect disclosures"

[[bin]]
name = "tl-mcp-server"
path = "src/main.rs"

[dependencies]
# MCP SDK (stdio transport)
rmcp = { version = "1.8", features = ["server", "macros", "transport-io"] }
rmcp-macros = "1.8"

# TrustLayer workspace deps (for tool implementations)
tl-types = { workspace = true }
tl-evidence = { workspace = true }
tl-chain = { workspace = true }
themis-evidence = { workspace = true }

# Async runtime + serde + error handling
tokio = { workspace = true }
serde = { workspace = true }
serde_json = "1"
thiserror = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }
anyhow = "1"
schemars = { version = "0.8", features = ["derive"] }
blake3 = { workspace = true }
base64 = { workspace = true }
uuid = { version = "1", features = ["v4"] }
