[package]
name = "tl-mcp-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Apohara TrustLayer MCP server — exposes 7 tools for AI agents (Claude Code, Cursor, Codex)"

[[bin]]
name = "tl-mcp-server"
path = "src/main.rs"

[dependencies]
# MCP SDK (stdio transport)
# US-13 status: rmcp 1.8 `#[tool_router]` macro has trait-bound issues.
# The 0.6 version on crates.io has a broken internal type
# (ClientCapabilitiesBuilderState doesn't exist). 1.5 doesn't exist on
# crates.io. The schemars 0.8 ↔ 1.x dependency mismatch breaks the
# `#[derive(JsonSchema)]` macros. **Documented as v1.0.5 follow-on.**
# See Plan v1.1 Block 1 Story US-13-fix for the full investigation log.
rmcp = { version = "1.8", features = ["server", "macros", "transport-io"] }
rmcp-macros = "1.8"

# TrustLayer workspace deps (for tool implementations)
tl-types = { workspace = true }
tl-evidence = { workspace = true }
tl-chain = { workspace = true }
themis-evidence = { workspace = true }

# Async runtime + serde + error handling
tokio = { workspace = true }
serde = { workspace = true }
serde_json = "1"
thiserror = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }
anyhow = "1"
blake3 = { workspace = true }
base64 = { workspace = true }
uuid = { version = "1", features = ["v4"] }
