[package]
name = "tl-mcp-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Apohara TrustLayer MCP server — exposes 7 tools for AI agents (Claude Code, Cursor, Codex)"

[[bin]]
name = "tl-mcp-server"
path = "src/main.rs"

[lib]
name = "tl_mcp_server"
path = "src/lib.rs"

[dependencies]
# v1.1.0-US-13: rmcp 1.8 macros are fundamentally broken (verified in
# v1.0.4 + v1.0.5). We drop rmcp entirely and implement a manual
# stdio JSON-RPC 2.0 server in main.rs. The wire format is the subset
# of MCP that Claude Code / Cursor / Codex use (initialize, tools/list,
# tools/call). When rmcp is fixed, this file can be replaced with
# the SDK-based implementation.
#
# This crate intentionally has NO rmcp dependency.
schemars = "0.8"
serde = { workspace = true }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tl-types = { workspace = true }
tl-evidence = { workspace = true }
tl-chain = { workspace = true }
themis-evidence = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = "0.1"
# v1.2-US-3: prompt envelope (nonce-tagged sentinels via OS RNG).
rand = "0.8"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }
anyhow = "1"
blake3 = { workspace = true }
base64 = { workspace = true }
