[package]
name = "tl-scitt"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
license = "MIT"
authors = ["Pablo M. Suarez <suarezpm@csnat.unt.edu.ar>"]
description = "SCITT-native receipts for offline verification (IETF draft-ietf-scitt-scrapi-09)"

[dependencies]
# Pinned per plan v3.1 AC-20 to match tl-evidence
coset = "=0.4.2"
ed25519-dalek = "2"
blake3 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_cbor_2 = "0.13"
sha2 = "0.10"
thiserror = "1"

[dev-dependencies]
# Use a fixed key for the frozen test fixture (deterministic across runs).
hex = "0.4"
# For SigningKey::generate in tests (we provide a tiny deterministic RngCore).
rand_core = "0.9"
