[package]
name = "tl-wasm"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
authors = ["Pablo M. Suarez <suarezpm@csnat.unt.edu.ar>"]
description = "WASM SDK for TrustLayer — browser/edge verification of evidence bundles (v1.1.0)"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# WASM bindings to JavaScript
wasm-bindgen = { version = "0.2", features = ["std"] }
# serde-wasm-bindgen for JSON interop with JS
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
# TrustLayer types (OrgId newtype, etc.)
tl-types = { path = "../tl-types" }
# BLAKE3 for bundle hash verification
blake3 = "1"
# Base64 for bundle_id encoding
base64 = "0.22"
# Hex encoding for fingerprint
hex = "0.4"
# Thiserror for typed errors
thiserror = "1"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = ["std"]
std = []
