[package]
name = "tl-watermark"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
authors = ["Pablo M. Suarez <suarezpm@csat.unt.edu.ar>"]
description = "Watermarking hooks for EU AI Act Art. 50(3) compliance (c2pa-rs, AudioSeal, Kirchenbauer)"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
sha2 = "0.11"
blake3 = "1"
# C2PA integration is currently implemented through the `c2patool`
# subprocess adapter (C2paWatermark) — see src/lib.rs. We deliberately
# do NOT pull in the `c2pa` Rust crate here: the previous optional
# `c2pa` dep dragged `x509-certificate 0.21 -> ring 0.16` into the
# workspace lockfile (Dependabot #1, CVE-2025-4432 / RUSTSEC-2025-0009),
# which is not trivially upgradeable without breaking other workspace
# crates (themis-evidence transitively pins sha2/hkdf to a version
# incompatible with c2pa 0.50+). The subprocess adapter avoids that
# whole dependency surface at the cost of one extra `c2patool` install
# in deployable containers. See DOCS/plan.md for the rationale and
# roadmap to reintroduce `c2pa` once themis-evidence's crypto stack is
# modernised.
#
# AudioSeal is Meta's audio watermarking library. We bind via FFI in
# production; for tests we use a stub implementation.
# Kirchenbauer et al. (2023) text watermarking is implemented in pure
# Rust (no FFI needed).

[features]
default = []

[dev-dependencies]
hex = "0.4"
