[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling"

[project]
name = "apohara-trustlayer-light"
version = "0.1.0"
description = "Apohara TrustLayer Python SDK — HTTP-only variant (no Rust extension) for environments where a Rust build is undesirable"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT OR Apache-2.0" }
authors = [
    { name = "Pablo M. Suarez", email = "suarezpm@csnat.unt.edu.ar" },
]
dependencies = [
    "httpx>=0.27,<1.0",
    "pydantic>=2.5,<3.0",
]

[project.urls]
Homepage = "https://github.com/SuarezPM/apohara-trustlayer"
Repository = "https://github.com/SuarezPM/apohara-trustlayer"

[tool.hatch.build.targets.wheel]
packages = ["src/apohara_trustlayer_light"]
