[project]
name = "apohara-trustlayer-control-plane"
version = "0.1.0"
description = "Apohara TrustLayer Control Plane — FastAPI service exposing /v1/disclosure, /v1/verify, /v1/evidence. Stateless. SQLAlchemy 2.0 async + append-only audit tables."
requires-python = ">=3.11"
license = { text = "MIT OR Apache-2.0" }
authors = [
    { name = "Pablo M. Suarez", email = "suarezpm@csnat.unt.edu.ar" },
]
dependencies = [
    # Web framework
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.32,<1.0",
    # Validation + serialization
    "pydantic[email]>=2.5,<3.0",
    "pydantic-settings>=2.0,<3.0",
    # Database
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.30,<1.0",
    "alembic>=1.13,<2.0",
    # HTTP client (for fetching from TSA, etc.)
    "httpx>=0.27,<1.0",
    # Structured logging
    "structlog>=24.0,<25.0",
    # Auth (JWT)
    "pyjwt[crypto]>=2.9,<3.0",
    # Crypto primitives for verifying requests
    "cryptography>=43.0,<44.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.24,<1.0",
    "pytest-cov>=6.0,<7.0",
    "ruff>=0.7,<1.0",
    "mypy>=1.13,<2.0",
    "freezegun>=1.5,<2.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["tests*", "migrations*"]
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "DTZ", "TID", "ICN", "PIE", "PT", "RET", "SIM", "TCH", "ARG", "PL", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004", "S101"]
"app/db/migrations/*" = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --strict-markers --cov=app --cov-fail-under=90"

[tool.coverage.run]
source = ["app"]
omit = ["*/migrations/*", "*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]
